--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: My All-In-One Website
+description: This is where I hope to rework all my existing repos to
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
-
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+url: https://RandomTester0.github.io/testing-website
