--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: All-In-One Website ¦ by Capp
+title: All-In-One Website | by Capp
 description: This is where I hope to rework all my existing repos to
 theme: just-the-docs
 
