--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 title: All-In-One Website | by Capp
-description: This is where I hope to rework all my existing repos to
-theme: just-the-docs
+description: Welcome to my Website!
+theme:
+  name: just-the-docs
+  dark_mode: true
+  dark_mode_default: true
 
 url: https://RandomTester0.github.io/testing-website
