--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: All-In-One Website | by Capp
-description: Welcome to my Website!
-theme: just-the docs
+description: This is where I hope to rework all my existing repos to
+theme: just-the-docs
+
+url: https://RandomTester0.github.io/testing-website
+
 just_the_docs:
   dark_mode: true
   dark_mode_default: true
-
-url: https://RandomTester0.github.io/testing-website
