--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: All-In-One Website | by Capp
-description: This is where I hope to rework all my existing repos to
+description: Welcome to my website!
 theme: just-the-docs
-stylesheets:
-  - "/assets/css/dark-mode.css"
+color_scheme: dark
 url: https://RandomTester0.github.io/testing-website
